# adafruit-beaglebone-io-python

./: .gitignore  .travis.yml  Adafruit_I2C.py  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Makefile  Makefile.am  README.md  README.rst  adafruit.patch  configure.ac  distribute_setup.py  fix_py_compile.py  helper.sh  install_all_python_versions.sh  pytest_all_versions.sh  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release.yml
Adafruit_BBIO/: Encoder.py  README.md  sysfs.py
Adafruit_LEDBackpack/: Adafruit_7Segment.py  Adafruit_I2C.py  README.md
doc/: rotary-encoder-eqep-test.md  run_config-pin_during_startup.md  test_read_write_all_gpio_pins.md
docs/: ADC.rst  Encoder.rst  GPIO.rst  Makefile  PWM.rst  README.md  SPI.rst  UART.rst  conf.py  index.rst
m4/: gtest.m4  kernel-release.m4
overlays/: ADAFRUIT-SPI0-00-00A0.dts  ADAFRUIT-SPI0-00A0.dts  ADAFRUIT-SPI0-01-00A0.dts  ADAFRUIT-SPI1-00-00A0.dts  ADAFRUIT-SPI1-00A0.dts  ADAFRUIT-SPI1-01-00A0.dts  ADAFRUIT-UART1-00A0.dts  ADAFRUIT-UART2-00A0.dts  ADAFRUIT-UART4-00A0.dts  ADAFRUIT-UART5-00A0.dts  builder.py
source/: Makefile.am  c_adc.c  c_adc.h  c_pinmux.c  c_pinmux.h  c_pwm.c  c_pwm.h  c_uart.c  c_uart.h  common.c  common.h  constants.c  constants.h  event_gpio.c  event_gpio.h  piHiPri.c  py_adc.c  py_gpio.c  py_pwm.c  py_uart.c  softPwm.c  spimodule.c  wiringBB.c  wiringBB.cpp  wiringBB.h
source/examples/cpp/: gpio.cpp  pwm.cpp
source/examples/python/: blinkLEDs.py  button.py  gpio.py  i2c.py  i2cmatrix.py  i2ctmp101.py  install.sh  leds.py  pwm.old.py
source/include/adafruit/: bbio.h
source/include/adafruit/bbio/: error.h  gpio.h  pwm.h
source/test/cpp/: abi.cpp  pwm.cpp
test/: issue170-pwm.py  issue178.py  start_all_pwm.py  test_adc.py  test_gpio_input.py  test_gpio_output.py  test_gpio_setup.py  test_led.py  test_pwm_setup.py  test_rotary.py  test_setup.py~  test_spi.py  test_uart.py
test/notes/: rotary-encoder-eqep-test.md  spi_loopback_test.md
test/setup/: 0001-rename-USR-LED-names-to-test-Adafruit_BBIO-issue-129.patch
udev/: 80-non-root-gpio-permissions.rules  udev-non-root-gpio-permissions.sh
